Fix table spacing

--- a/src/app/Components/ticket-table/ticket-table.component.scss
+++ b/src/app/Components/ticket-table/ticket-table.component.scss
@@ -30,9 +30,9 @@ table {
     width: 100%;
   }
 
-  td, th {
-    width: 25%;
-  }
+  // td, th {
+  //   width: 25%;
+  // }
 
   th{
     color: #ED6D84;
